k8s/base/crypto/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: crypto
  labels:
    component.kutara.io/postgres-secrets: "true"
