k8s/base/crypto/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "isolate-crypto"
  namespace: crypto
spec:
  endpointSelector:
    matchLabels:
      {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: database
        cnpg.io/cluster: postgres
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/name: prometheus

  egress:
  - toEntities:
    - world
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: database
        cnpg.io/cluster: postgres
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: default
  - toEndpoints:
    - matchLabels:
        component: apiserver
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
